# rust_ldap_registration

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
config/: application.merged.yml  application.yml  application.yml.example  config.yaml
proto/: ldap_validation.proto  registration.proto
scripts/: create_dynamodb_table.sh  start_local_dynamodb.sh
src/: config.rs  ldap_validation.rs  lib.rs  main.rs  session.rs
src/auth/: entra.rs  ldap.rs  mod.rs
src/db/: dynamodb.rs  mod.rs
src/grpc/: mod.rs
src/twilio/: mod.rs  rate_limit.rs
