[package]
name = "rust_ldap_registration"
version = "1.0.1"
edition = "2021"
authors = ["Signal"]
description = "Signal Registration Service in Rust with LDAP Authentication"
license = "AGPL-3.0"
repository = "https://github.com/jgnoonan/rust_ldap_registration"

[dependencies]
# Async runtime
tokio = { version = "1.35.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait = "0.1.77"

# Web framework and gRPC
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.4"
axum = "0.8.1"

# LDAP
ldap3 = { version = "0.11.3", features = ["tls"] }

# AWS
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.9.0"

# HTTP client
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }

# Configuration
config = { version = "0.15.6", features = ["yaml"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0.56"
anyhow = { version = "1.0.77", features = ["backtrace"] }

# Logging and metrics
tracing = { version = "0.1.40", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
phonenumber = "0.3.3"

# Testing
[dev-dependencies]
mockito = "1.2.0"
tokio-test = "0.4.3"
test-log = { version = "0.2", features = ["trace"] }
tracing-test = "0.2"
mockall = "0.12.1"

[build-dependencies]
tonic-build = "0.12.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
