[package]
name = "entra-id-registration"
version = "0.1.0"
edition = "2021"
authors = ["jgnoonan"]
description = "A registration service using Microsoft Entra ID"
license = "AGPL-3.0"
repository = "https://github.com/jgnoonan/rust_entra_registration"

[dependencies]
# Async runtime
tokio = { version = "1.35.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait = "0.1.77"

# Web framework and gRPC
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.4"

# HTTP client for Entra ID
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }

# Configuration
config = { version = "0.15.6", features = ["yaml"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4.18", features = ["derive"] }

# Error handling
thiserror = "1.0.56"
anyhow = { version = "1.0.77", features = ["backtrace"] }

# Logging and metrics
tracing = { version = "0.1.40", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.0"
urlencoding = "2.1.3"

# Testing
[dev-dependencies]
mockito = "1.2.0"
tokio-test = "0.4.3"
test-log = { version = "0.2", features = ["trace"] }

[build-dependencies]
tonic-build = "0.12.3"
